@@ -42,5 +42,12 @@
         </hbox>
       </vbox>
     </frame>
+    <frame label='Automount'>
+        <radio-group name='automount'>
+            <radio label='No automatic mounting' value='0'></radio>
+            <radio label='Mount volume when inserted' value='1'></radio>
+            <radio label='Open volume when inserted' value='2'></radio>
+        </radio-group>
+    </frame>
   </section>
 </options>
