@@ -21,6 +21,7 @@ class MediaTrayMain(Main):
         self.__o_pin = Option("pin", True)
         self.__o_pin_x = Option("pin_x", PIN_LEFT)
         self.__o_pin_y = Option("pin_y", PIN_TOP)
+        self.__o_automount = Option("automount", 0)
  
     def init_config(self):
         Main.init_config(self)
@@ -32,6 +33,7 @@ class MediaTrayMain(Main):
             pin=self.__o_pin.int_value,
             pin_x=self.__o_pin_x.int_value,
             pin_y=self.__o_pin_y.int_value,
+            automount=self.__o_automount.int_value,
         )
 
         # MediaTray doesn't use the 'hidden' option, so make sure no icons get
@@ -59,6 +61,9 @@ class MediaTrayMain(Main):
 
         if self.__o_pin_y.has_changed:
             self.__mediaicon_config.pin_y = self.__o_pin_y.int_value
+
+        if self.__o_automount.has_changed:
+            self.__mediaicon_config.automount = self.__o_automount.int_value
 
         Main.options_changed(self)
 
