@@ -3,6 +3,7 @@ import gio
 from traylib.winicon_manager import WinIconManager
 
 from mediatray.mediaicon import MediaIcon
+from mediatray.mediaicon_config import AUTOMOUNT, AUTOOPEN
 
 
 class MediaIconManager(WinIconManager):
@@ -13,12 +14,17 @@ class MediaIconManager(WinIconManager):
         self.__icon_config = icon_config
         self.__win_config = win_config
         self.__mediaicon_config = mediaicon_config
+        self.__automount_actions = {
+            0: lambda: None,
+            1: MediaIcon.mount,
+            2: MediaIcon.open,
+        }
 
     def init(self):
         self.__volume_monitor = gio.volume_monitor_get()
 
         for volume in self.__volume_monitor.get_volumes():
-            self.__volume_added(self.__volume_monitor, volume)
+            self.__volume_added(self.__volume_monitor, volume, initial=True)
             yield None
 
         for x in WinIconManager.init(self):
@@ -27,10 +33,12 @@ class MediaIconManager(WinIconManager):
         self.__volume_monitor.connect("volume-added", self.__volume_added)
         self.__volume_monitor.connect("volume-removed", self.__volume_removed)
 
-    def __volume_added(self, volume_monitor, volume):
+    def __volume_added(self, volume_monitor, volume, initial=False):
         icon = MediaIcon(self.icon_config, self.__win_config,
                          self.__mediaicon_config, volume)
         self.tray.add_icon(None, volume, icon)
+        if not initial:
+            self.__automount_actions[self.mediaicon_config.automount](icon)
         self.icon_added(icon)
 
     def __volume_removed(self, volume_monitor, volume):
@@ -38,3 +46,5 @@ class MediaIconManager(WinIconManager):
 
     icon_config = property(lambda self : self.__icon_config)
     win_config = property(lambda self : self.__win_config)
+    mediaicon_config = property(lambda self : self.__mediaicon_config)
+
