@@ -17,3 +17,7 @@ _("Left")
 _("Right")
 _("Top")
 _("Bottom")
+_("Automount")
+_("No automatic mounting")
+_("Mount volume when inserted")
+_("Open volume when inserted")
